--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "type": "module",
     "scripts": {
         "test": "nyc --reporter=html --reporter=text mocha --recursive",
-        "server": "http-server"
+        "//": "-c-1 disables caching for http-server",
+        "server": "http-server -c-1",
+        "build": "tsc"
     },
     "devDependencies": {
         "@eslint/js": "^9.15.0",
@@ -14,7 +16,8 @@
         "globals": "^15.12.0",
         "http-server": "^14.1.1",
         "mocha": "^10.8.2",
-        "nyc": "^17.1.0"
+        "nyc": "^17.1.0",
+        "typescript": "^5.7.3"
     },
     "author": "Jakob Haller",
     "license": "MIT"
