work in progress

--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
     "name": "GraphNote",
     "version": "1.0.0",
-    "description": "Note taking and visualization",
-    "main": "main.js",
+    "description": "Note taking app",
+    "main": "public/dist/app.js",
     "type": "module",
     "scripts": {
-        "test": "nyc --reporter=html --reporter=text mocha --recursive",
         "//": "-c-1 disables caching for http-server",
-        "server": "http-server -c-1",
-        "build": "tsc"
+        "build": "tsc",
+        "lint": "eslint .",
+        "test": "mocha",
+        "server": "http-server -c-1"
     },
     "devDependencies": {
         "@eslint/js": "^9.15.0",
+        "@types/mocha": "^10.0.10",
+        "assert": "^2.1.0",
         "eslint": "^9.15.0",
         "globals": "^15.12.0",
         "http-server": "^14.1.1",
         "mocha": "^10.8.2",
         "nyc": "^17.1.0",
-        "typescript": "^5.7.3"
+        "ts-node": "^10.9.2",
+        "typescript": "^5.7.3",
+        "typescript-eslint": "^8.20.0"
     },
     "author": "Jakob Haller",
     "license": "MIT"
