Getting unit tests running with vitest

--- a/package.json
+++ b/package.json
@@ -8,22 +8,20 @@
         "//": "-c-1 disables caching for http-server",
         "build": "tsc",
         "lint": "eslint .",
-        "test": "mocha",
+        "test": "vitest",
         "server": "http-server -c-1"
     },
     "devDependencies": {
         "@eslint/js": "^9.15.0",
-        "@types/mocha": "^10.0.10",
-        "assert": "^2.1.0",
         "eslint": "^9.15.0",
-        "globals": "^15.12.0",
         "http-server": "^14.1.1",
-        "mocha": "^10.8.2",
-        "nyc": "^17.1.0",
-        "ts-node": "^10.9.2",
         "typescript": "^5.7.3",
-        "typescript-eslint": "^8.20.0"
+        "typescript-eslint": "^8.20.0",
+        "vitest": "^2.1.8"
     },
     "author": "Jakob Haller",
-    "license": "MIT"
+    "license": "MIT",
+    "dependencies": {
+        "@types/node": "^22.10.6"
+    }
 }
