--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
         "build": "tsc",
         "lint": "eslint .",
         "test": "vitest",
-        "server": "http-server -c-1"
+        "server": "http-server . -c-1"
     },
     "devDependencies": {
         "@eslint/js": "^9.15.0",
+        "@types/node": "^22.10.7",
         "eslint": "^9.15.0",
+        "globals": "^15.14.0",
         "http-server": "^14.1.1",
         "typescript": "^5.7.3",
         "typescript-eslint": "^8.20.0",
         "vitest": "^2.1.8"
     },
     "author": "Jakob Haller",
-    "license": "MIT",
-    "dependencies": {
-        "@types/node": "^22.10.6"
-    }
+    "license": "MIT"
 }
