--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
         "build": "tsc",
         "lint": "eslint .",
         "test": "vitest",
+        "coverage": "vitest run --coverage",
         "server": "http-server . -c-1"
     },
     "devDependencies": {
         "@eslint/js": "^9.15.0",
         "@types/node": "^22.10.7",
+        "@vitest/coverage-v8": "^2.1.8",
         "eslint": "^9.15.0",
         "globals": "^15.14.0",
         "http-server": "^14.1.1",
